# clinical-snowflake-dbt

./: .env  .env.example  README.md  pyproject.toml
data/raw/: AE.csv  CM.csv  DM.csv
dbt/: .user.yml  profiles.yml
docs/: architecture.md  data_product_contract.yml  erd.md  worksheets_migration.md
dq/: observability_notes.md  run_ge_checks.py
flows/: elt_flow.py
placeholders/worksheets/: Intellicheck_create_tables.sql  Match_Query_Check.sql  Match_Query_Check_Filter_Text.sql  Match_Query_Check_Filter_Text_Refine.sql  PD24_REGISTER_INFO.sql  Python_Count_Categorical_Data.py  Python_Filter_by_STUDYID_snowpark.py  Python_Filter_by_STUDYID_with_pandas.py  Python_Print_Table_Name_Match_Pattern.py  Python_Show_AE.py  Row_click_action.sql  SQL_Add_and_rename_columns.sql  SQL_Show_partial_date.sql  TT_Refresh.sql  TT_Refresh_2.sql
scripts/: bootstrap_snowflake.py
src/: load_csv_to_snowflake.py  snowflake_utils.py
src/analytics/: ae_overview.py  category_counts.py
src/auth/: wam_oauth.py
src/metadata/: table_pattern_search.py
src/queries/: filter_by_studyid_pandas.py  filter_by_studyid_snowpark.py
tests/: test_layout.py
transformations/dbt/: .user.yml  dbt_project.yml  profiles.yml
transformations/dbt/macros/: partial_date.sql
transformations/dbt/models/gold/: gold_study_quality_kpis.sql
transformations/dbt/models/silver/: dim_subject.sql  fct_ae.sql
transformations/dbt/models/staging/: schema.yml  stg_ae.sql  stg_cm.sql  stg_dm.sql
